# scripts

./: .gitignore  README.md  cli.py  config.sample.toml  pyproject.toml  tui.py
scripts/: archive_each.py  rptl.py
scripts/images/: group_size.py  resize.py
scripts/utils/: bytes_unit.py  terminal.py
tests/: test_archive_each.py  test_group_size.py  test_resize.py  test_rptl.py  test_utils.py
